- registration werkt nu - check op username/email exists - logout toegevoegd waarbij localstorage geleegd wordt - subscribe op ingelogde user om content te tonen - loading spinnertje toegevoegd op login&register - openapi -> addnewuser is nu registernewuser - boolean repository checks toegevoegd
